--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "mo-js": "^0.288.1",
+    "pre-toast": "^1.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-motion": "^0.4.8"
