--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "mo-js": "^0.288.1",
     "pre-toast": "^1.0.4",
     "react": "^15.5.4",
+    "react-audio": "^0.0.1",
     "react-dom": "^15.5.4",
-    "react-motion": "^0.4.8"
+    "react-motion": "^0.4.8",
+    "react-sound": "^0.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
