--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "howler": "^2.0.3",
     "mo-js": "^0.288.1",
     "pre-toast": "^1.0.4",
     "react": "^15.5.4",
