--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "create-react-app": "^1.3.0",
+    "global": "^4.3.2",
     "howler": "^2.0.3",
     "mo-js": "^0.288.1",
     "pre-toast": "^1.0.4",
